# FcCore

./: CMakeLists.txt
.cache/clangd/index/: FcCore.c.725335BBC3862D2A.idx  FcCore.h.69087FD680947BEF.idx  FcCoreLoader.h.D82A4866C4135013.idx  FcError.h.6D03EC0F43BDF71F.idx  FcGL.h.F0DE3688C81D20EE.idx  FcGLStatic.h.2F28C8542EE596FC.idx  FcGLX.h.F53CFEEA665C1C50.idx  FcGL_Button.fs.bin.B58C58206F869582.idx  FcGL_Button.glsl.bin.055D0ECFD35E9092.idx  FcGL_Button.h.B50E92C231227A45.idx  FcGL_Button.vs.bin.FAEFC25CDAC96719.idx  FcGL_Program.h.5E4C2D693D5378C7.idx  FcGL_Texture.h.FD0E840AADCD23A4.idx  FcGL_UI.h.0D1CF16B865FF5C5.idx  FcKeyboardXLIB.h.84255B36CA369787.idx  FcMath.h.AF43B946717E1E11.idx  FcProducerConsumer.h.9E851AE15833DCA7.idx  FcThread.h.28858361BBA318BA.idx  FcThreadPTHRED.h.9223E8ABA5C220AE.idx  FcWindow.h.6282F6106DA29BBC.idx  FcWindowXLIB.h.BC606D7A7CB842AD.idx
src/: FcCore.c  FcCore.h  FcCoreLoader.h  FcCoreXLIB.h  FcError.h  FcGL.h  FcGLStatic.h  FcGLX.h  FcGL_Button.h  FcGL_Program.h  FcGL_Texture.h  FcGL_UI.h  FcKeyboardXLIB.h  FcMath.h  FcProducerConsumer.h  FcThread.h  FcThreadPTHRED.h  FcWGL.h  FcWindow.h  FcWindowXLIB.h
src/Shaders/: FcGL_Button.fs  FcGL_Button.vs
